# fs-telemetry

./: .gitignore  BUTTONS_REPAIR_COMPLETE.md  CHANGELOG.md  CIRCUITS_BUTTONS_STATUS.md  CONTRIBUTING.md  INSTALL.md  LICENSE  NETTOYAGE_COMPLETE.md  PROJECT_SUMMARY.md  PUSH_INSTRUCTIONS.md  QUICKSTART.txt  README.md  README_APP.md  README_EN.md  README_FR.md  REORGANISATION_COMPLETE.md  REORGANISATION_PLAN.md  REPLAY_REPAIR_COMPLETE.md  app.py  app_config.py  arduino_example.ino  config.py  conftest.py  debug_cursors.py  fix_all.py  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-ci.txt  requirements.txt  review.py  run.py  run.sh  setup.py  simple_app.py  start.py  test_ci_setup.py  test_multiple.csv  test_new_charts.py  (+1 more)
acquisition/: csv_source.py  serial_source.py
data/: __init__.py  telemetry_manager.py
docs/: CHANGELOG.md  FUEL_TRACKING.md  PROJECT_SUMMARY.md  README_APP.md  README_EN.md  README_FR.md  WEB_BROWSER_ANALYSIS.md
gui/: __init__.py  file_selector.py  live_mode_widget.py  main_window.py  replay_mode_widget.py  temporal_analysis_widget.py
log_handlers/: csv_logger.py
parsing/: csv_parser.py
replay/: replay.py
scripts/: final_import_update.py  fix_all_imports_complete.py  fix_relative_imports.py  test_ci_setup.py  test_circuit_buttons.py  test_replay_functionality.py  update_imports.py
src/: __init__.py  app.py  console_display.py  console_handler.py  csv_logger.py  csv_parser.py  csv_source.py  file_selector_widget.py  gui_app.py  live_mode_widget.py  log_handlers_init.py  main.py  main_window.py  parsing_init.py  replay_init.py  replay_mode_widget.py  replay_thread.py  serial_source.py  spider_charts.py  telemetry_charts.py  telemetry_manager.py  telemetry_source.py  temporal_analysis_widget.py  visualization_init.py
tests/: README.md  README_ARDUINO.md  __init__.py  arduino_telemetry_test.ino  conftest.py  enhanced_sample_data.csv  run_20260130_181824732453_8.csv  test_csv_logger.py  test_csv_parser.py  test_csv_source.py  test_gui_components.py  test_imports.py  test_integration.py  test_main_demo.py  test_telemetry_manager.py  test_temporal.py
tools/: FormulaTelementry.spec  build_exe.bat  build_exe.py  cleanup_logs.py  ecu_injection_table.py  injection_table.py  review.bat  review.py  review.sh  run.bat  test_main_demo.py  (+1 more)
(+44 files in other folders)
